--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -3,47 +3,49 @@
     {{ _('network')|uc_first }}
 {% endblock %}
 {% block content %}
-{% if json_data %}
-    <link rel="stylesheet" href="/static/css/network.css" />
     <link rel="stylesheet" href="/static/vendor/huebee-2.0.0/huebee.min.css" />
-    <script src="/static/vendor/d3-5.5.0/d3-5.5.0.min.js"></script>
     <script src="/static/vendor/huebee-2.0.0/huebee.pkgd.min.js"></script>
-    <svg></svg>
-    <script>
-        var graph = {{ json_data|safe }};
-        var width = {{ network_params['options']['width'] }};
-        var height = {{ network_params['options']['height'] }};
-        var charge = {{ network_params['options']['charge'] }};
-        var distance = {{ network_params['options']['distance'] }}
-    </script>
-    <script src="/static/js/network.js"></script>
-{% endif %}
-<div style="float:left;">
-    <form method="post" id="network-form" style="margin-right:1em;">
-        {{ form.csrf_token }}
-        <h2>{{ _('classes')|uc_first }}</h2>
-        <div>
-            <div style="float:left">
-                {{ form.classes }}
+    {% if json_data %}
+        <link rel="stylesheet" href="/static/css/network.css" />
+        <script src="/static/vendor/d3-5.5.0/d3-5.5.0.min.js"></script>
+        <svg></svg>
+        <script>
+            var graph = {{ json_data|safe }};
+            var width = {{ network_params['options']['width'] }};
+            var height = {{ network_params['options']['height'] }};
+            var charge = {{ network_params['options']['charge'] }};
+            var distance = {{ network_params['options']['distance'] }}
+        </script>
+        <script src="/static/js/network.js"></script>
+    {% else %}
+        <h2 style="float:right;">{{ _('no data to display')|uc_first }}</h2>
+    {% endif %}
+    <div style="float:left;">
+        <form method="post" id="network-form" style="margin-right:1em;">
+            {{ form.csrf_token }}
+            <h2>{{ _('classes')|uc_first }}</h2>
+            <div>
+                <div style="float:left">
+                    {{ form.classes }}
+                </div>
+                <div style="float:left;margin-left:0.5em;">
+                    {% for class_code in available_classes %}
+                        {{ form['color_' + class_code] }}<br />
+                    {% endfor %}
+                </div>
             </div>
-            <div style="float:left;margin-left:0.5em;">
-                {% for class_code in ['E21', 'E7', 'E31', 'E33', 'E40', 'E74', 'E53', 'E18', 'E8', 'E12', 'E6', 'E84'] %}
-                    {{ form['color_' + class_code] }}<br />
-                {% endfor %}
-            </div>
-        </div>
-        <div style="clear:both;"></div>
-        ---<br />
-        {{ form.orphans }} {{ _('show orphans')|uc_first }}
-        <h2>{{ _('properties')|uc_first }}</h2>
-        {{ form.properties }}
-        <h2>{{ _('network options')|uc_first }}</h2>
-        {{ form.width }} {{ form.width.label }}<br />
-        {{ form.height }} {{ form.height.label }}<br />
-        {{ form.charge }} {{ form.charge.label }}<br />
-        {{ form.distance }} {{ form.distance.label }}<br />
-        <input id="save" name="save" value="{{_('apply')|uc_first}}" type="submit">
-        <p><a href="https://redmine.openatlas.eu/projects/uni/wiki/Network_visualization" rel="noopener" target="_blank">{{ _('manual')|uc_first }}</a></p>
-    </form>
-</div>
+            <div style="clear:both;"></div>
+            ---<br />
+            {{ form.orphans }} {{ _('show orphans')|uc_first }}
+            <h2>{{ _('links')|uc_first }}</h2>
+            {{ form.properties }}
+            <h2>{{ _('network options')|uc_first }}</h2>
+            {{ form.width }} {{ form.width.label }}<br />
+            {{ form.height }} {{ form.height.label }}<br />
+            {{ form.charge }} {{ form.charge.label }}<br />
+            {{ form.distance }} {{ form.distance.label }}<br />
+            <input id="save" name="save" value="{{_('apply')|uc_first}}" type="submit">
+            <p><a href="https://redmine.openatlas.eu/projects/uni/wiki/Network_visualization" rel="noopener" target="_blank">{{ _('manual')|uc_first }}</a></p>
+        </form>
+    </div>
 {% endblock %}
