--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -17,7 +17,7 @@
             var distance = {{ network_params['options']['distance'] }}
         </script>
         <script src="/static/js/network.js"></script>
-        <script src="/static/js/saveSvgAsPng.js"></script>
+        <script src="/static/vendor/saveSvgAsPng-1.4.5/saveSvgAsPng.js"></script>
         <a class="button" onclick="svgToPng()">Download</a>
     {% else %}
         <h2 style="float:right;">{{ _('no data to display')|uc_first }}</h2>
