--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -17,7 +17,7 @@
     translate['map_info_reedit'] = '{{ _('map_info_reedit')|uc_first|safe }}';
     translate['map_info_shape'] = '{{ _('map_info_shape')|uc_first|safe }}';
     translate['map_info_area'] = '{{ _('map_info_area')|uc_first|safe }}';
-    translate['map_info_point'] = '{{ _('map_info_point')|uc_first|safe }}';
+    translate['map_info_centerpoint'] = '{{ _('map_info_point')|uc_first|safe }}';
     translate['map_info_close'] = '{{ _('map_info_close')|uc_first|safe }}';
     translate['map_info_description'] = '{{ _('map_info_description')|safe }}';
 </script>
