--- a/openatlas/static/css/map.css
+++ b/openatlas/static/css/map.css
@@ -1,4 +1,4 @@
-.shapeInput {
+.mapFormDiv {
     padding: 6px 8px;
     background: white;
     background: rgba(255,255,255,1);
@@ -6,7 +6,7 @@
     border-radius: 5px;
 }
 
-#shapeForm {
+#geometryForm {
     width: 300px;
     overflow: hidden;
 }
@@ -16,7 +16,7 @@
     font-style: normal;
 }
 
-#shapeForm input, select {
+#geometryForm input, select {
     width: 200px;
     float: right;
     margin-left: 15px;
@@ -27,29 +27,17 @@
     display: block;
 }
 
-#shapeForm textarea {
+#geometryForm textarea {
     font: 10pt "Helvetica New", Arial, Helvetica, sans-serif;
     float: right;
     width: 96%;
     resize:vertical;
 }
 
-#shapeForm label {
+#geometryForm label {
     float: left;
     margin-top: 3px;
     padding-top: 5px
-}
-
-#resetButton {
-    margin-top: 7px;
-    margin-right: 7px;
-    float: right;
-}
-
-#editCloseButton {
-    color: #ccc;
-    cursor: pointer;
-    float: right;
 }
 
 #markerCloseButton {
@@ -61,12 +49,6 @@
 #closeButton {
     color: #ccc;
     cursor: pointer;
-    float: right;
-}
-
-#editResetButton, #saveButton, #editSaveButton, #markerSaveButton {
-    margin-top: 7px;
-    margin-right: 7px;
     float: right;
 }
 
