--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -48,8 +48,12 @@
                 <a class="button" href="{{ url_for('node_move_entities', id_=node.id) }}">{{ _('move entities')|uc_first }}</a>
                 <a class="button" href="{{ url_for('node_remove_entities', id_=node.id) }}">{{ _('remove entities')|uc_first }}</a>
             </div>
-            {{ tables['entities']|pager|safe }}
-            {{ tables['link_entities']|pager|safe }}
+            {% if tables['entities'].data %}
+                {{ tables['entities']|pager|safe }}
+            {% endif %}
+            {% if tables['link_entities'].data %}
+                {{ tables['link_entities']|pager|safe }}
+            {% endif %}
         </div>
     {% endif %}
 </div>
