--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div id="tabs" class="tabs-container">
     <ul>
-        <li><a href="#tab-orphan">{{ _('orphan')|uc_first }} ({{ tables['orphans']['data']|length|format_number }})</a></li>
+        <li><a href="#tab-orphan">{{ _('orphans')|uc_first }} ({{ tables['orphans']['data']|length|format_number }})</a></li>
         <li><a href="#tab-unlinked">{{ _('unlinked')|uc_first }} ({{ tables['unlinked']['data']|length|format_number }})</a></li>
         <li><a href="#tab-nodes">{{ _('type')|uc_first }} ({{ tables['nodes']['data']|length|format_number }})</a></li>
         <li><a href="#tab-missing-files">{{ _('missing files')|uc_first }} ({{ tables['missing_files']['data']|length|format_number }})</a></li>
