--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -77,6 +77,7 @@
             </div>
         {% endfor %}
     </div>
+    <p>{{ 'Form_field_type'|manual_link|safe }}</p>
     <script>
         $(document).ready(function () {
             $("#tabs-menu").tabs();
