--- a/openatlas/static/css/map.css
+++ b/openatlas/static/css/map.css
@@ -11,27 +11,11 @@
     overflow: hidden;
 }
 
-#inputFormTitle, #headingTextAdm {
-    font-weight: bold;
-    font-style: normal;
-}
-
-#geometryForm input, select {
-    width: 200px;
-    float: right;
-    margin-left: 15px;
-}
-
-#nameField input, select {
-    width: 96%;
-    display: block;
-}
-
 #geometryForm textarea {
     font: 10pt "Helvetica New", Arial, Helvetica, sans-serif;
     float: right;
     width: 96%;
-    resize:vertical;
+    resize: vertical;
 }
 
 #geometryForm label {
@@ -40,10 +24,25 @@
     padding-top: 5px
 }
 
-#markerCloseButton {
-    color: #ccc;
-    cursor: pointer;
+#geometryForm input {
     float: right;
+    margin-left: 15px;
+}
+
+#inputFormTitle {
+    font-weight: bold;
+    font-style: normal;
+}
+
+#nameField input, select {
+    width: 96%;
+    display: block;
+}
+
+#saveButton {
+    float: right;
+    margin-top: 1em;
+    margin-left: 1em;
 }
 
 #closeButton {
