CSV import: actual import, preview, validations

--- a/openatlas/templates/import/person.html
+++ b/openatlas/templates/import/person.html
@@ -7,4 +7,17 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
+    {% for invalid_item in columns['invalid'] %}
+        <span class="error">{{ _('invalid column')|uc_first }}: {{ invalid_item }}</span><br />
+    {% endfor %}
+    {% if table %}
+        <h2>
+            {% if imported %}
+                {{ _('imported')|uc_first }}
+            {% else %}
+                {{ _('preview')|uc_first }}
+            {% endif %}
+        </h2>
+        {{ table|pager|safe }}
+    {% endif %}
 {% endblock %}
