Export: pandas, more options, manual link, ...

--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -5,7 +5,10 @@
 {% endblock %}
 {% block content %}
     {% if writeable %}
-        <div style="float:left;margin-right: 1em;">{{ form|display_form|safe }}</div>
+        <div style="float:left;margin-right: 1em;">
+            {{ form|display_form|safe }}
+            <p>{{ 'Export'|manual_link|safe }}</p>
+        </div>
     {% else %}
         <p><span class="error">{{ _('directory not writable')|uc_first }}: export/csv</span></p>
     {% endif %}
