--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -558,8 +558,8 @@ div.pager div.navigation {
 
 }
 
-select.pagesize {
-    width: 4em;
+select.pagesize, select#gis {
+    width: auto;
 }
 
 div.data-table div.display-none {
