--- a/openatlas/templates/export/export_sql.html
+++ b/openatlas/templates/export/export_sql.html
@@ -6,6 +6,7 @@
 {% block content %}
     {% if writeable %}
         {{ form|display_form|safe }}
+        <p>{{ 'Export'|manual_link|safe }}</p>
     {% else %}
         <p><span class="error">{{ _('directory not writable')|uc_first }}: export/sql</span></p>
     {% endif %}
