--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -60,12 +60,13 @@
     <h2>Contributors</h2>
     <p>
         Asil Çetin<br />
-        Bernhard Koschicek (DPP)<br />
+        Bernhard Koschicek<br />
         Christof Rauchenberger<br />
-        Johannes Preiser-Kapeller (MEDCON)<br />
+        Johannes Preiser-Kapeller<br />
         Judith Pucher (Digital Laut)<br />
-        Katharina Winckler (DPP)<br />
-        Mihailo Popović (DPP)<br />
-        Petra Heinicker (MEDCON)<br />
+        Katharina Winckler<br />
+        Mihailo Popović<br />
+        Petra Heinicker<br />
+        Veronika Gründhammer<br />
     </p>
 {% endblock %}
