--- a/openatlas/templates/import/index.html
+++ b/openatlas/templates/import/index.html
@@ -9,5 +9,6 @@
             <a href="{{ url_for('import_project_insert') }}">+ {{ _('project')|uc_first }}</a>
         </div>
     {% endif %}
+    <p>{{ 'Import'|manual_link|safe }}</p>
     {{ table|pager|safe }}
 {% endblock %}
