--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -66,6 +66,7 @@
         Judith Pucher (Digital Laut)<br />
         Katharina Winckler<br />
         Mihailo Popović<br />
+        Peter Andorfer<br />
         Petra Heinicker<br />
         Veronika Gründhammer<br />
     </p>
