--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -14,8 +14,11 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
-    {% for invalid_item in columns['invalid'] %}
-        <span class="error">{{ _('invalid column')|uc_first }}: {{ invalid_item }}</span><br />
+    {% for item in messages['error'] %}
+        <span class="error">{{ _('error')|uc_first }} - {{ item }}</span><br />
+    {% endfor %}
+    {% for item in messages['warn'] %}
+        <span class="error">{{ _('warning')|uc_first }} - {{ item }}</span><br />
     {% endfor %}
     <p>{{ 'Import'|manual_link|safe }}</p>
     {% if table %}
