--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -13,6 +13,19 @@
     {% endif %}
 {% endblock %}
 {% block content %}
+    <p>
+        {{ _('max size')|uc_first }}:
+        <span style="font-weight: bold;">{{ session['settings']['file_upload_max_size'] }} MB </span>
+        - {{ _('if exceeded you will receive a connection error')|uc_first }}.
+    </p>
+    <p>
+        {{ _('allowed extensions')|uc_first }}:
+        <span style="font-weight: bold;">{{ config['IMPORT_FILE_EXTENSIONS']|join(', ') }}</span> -
+        {{ _('example files')|uc_first }}:
+        <a href="/static/import/example.csv">example.csv</a>,
+        <a href="/static/import/example.xlsx">example.xlsx</a>
+    </p>
+    <p>{{ 'Import'|manual_link|safe }}</p>
     {{ form|display_form|safe }}
     {% for item in messages['error'] %}
         <span class="error">{{ _('error')|uc_first }} - {{ item }}</span><br />
@@ -20,7 +33,6 @@
     {% for item in messages['warn'] %}
         <span class="error">{{ _('warning')|uc_first }} - {{ item }}</span><br />
     {% endfor %}
-    <p>{{ 'Import'|manual_link|safe }}</p>
     {% if table %}
         <h2>
             {% if imported %}
