--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -40,15 +40,13 @@
             <a href="{{ url_for('admin_log') }}">{{ _('system log')|uc_first }}</a>
         {% endif  %}
 
-        {% if 'manager'|is_authorized %}
-            <h1>{{ _('export')|uc_first }}</h1>
-            <a href="{{ url_for('export_csv') }}">{{ _('CSV')|uc_first }}</a>
-            <a href="{{ url_for('export_sql') }}">{{ _('SQL')|uc_first }}</a>
-        {% endif  %}
-
-        {% if 'editor'|is_authorized %}
-            <h1>{{ _('import')|uc_first }}</h1>
-            <a href="{{ url_for('import_index') }}">{{ _('projects')|uc_first }}</a>
+         {% if 'editor'|is_authorized %}
+            <h1>{{ _('data transfer')|uc_first }}</h1>
+            <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
+            {% if 'manager'|is_authorized %}
+                <a href="{{ url_for('export_csv') }}">{{ _('export')|uc_first }} CSV</a>
+                <a href="{{ url_for('export_sql') }}">{{ _('export')|uc_first }} SQL</a>
+            {% endif  %}
         {% endif  %}
 
         {% if 'admin'|is_authorized %}
