--- a/openatlas/templates/content/index.html
+++ b/openatlas/templates/content/index.html
@@ -4,5 +4,6 @@
     > {{ _('content')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ 'Content'|manual_link|safe }}
     {{ table_content|pager|safe }}
 {% endblock %}
