--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -3,6 +3,7 @@
     {{ _('source')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ 'Source'|manual_link|safe }}
     {% if 'editor'|is_authorized %}
         <div class="button-bar">
             <a href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
