--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -16,6 +16,11 @@ html, body, input, select, textarea {
     margin-left: 1em;
 }
 
+p.manual {
+    margin: 0;
+    margin-bottom: 0.5em;
+}
+
 input[type="text"].value-type {
     width: 4em;
     text-align: right;
