--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -3,6 +3,7 @@
     {{ _('actor')|uc_first }}
 {% endblock %}
 {% block content %}
+    {{ 'Actor'|manual_link|safe }}
     {% if 'editor'|is_authorized %}
         <div class="button-bar">
             {% for code in config['CLASS_CODES']['actor']%}
