--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -13,12 +13,7 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    <p>{{ 'Import'|manual_link|safe }}</p>
-    <p>
-        {{ _('max size')|uc_first }}:
-        <span style="font-weight: bold;">{{ session['settings']['file_upload_max_size'] }} MB </span>
-        - {{ _('if exceeded you will receive a connection error')|uc_first }}.
-    </p>
+    {{ 'Import'|manual_link|safe }}
     <p>
         {{ _('allowed extensions')|uc_first }}:
         <span style="font-weight: bold;">{{ config['IMPORT_FILE_EXTENSIONS']|join(', ') }}</span> -
