--- a/openatlas/templates/model/network.html
+++ b/openatlas/templates/model/network.html
@@ -25,7 +25,7 @@
         <h2 style="float:right;">{{ _('no data to display')|uc_first }}</h2>
     {% endif %}
     <div style="float:left;">
-        <p>{{ 'Network_visualization'|manual_link|safe }}</p>
+        {{ 'Network_visualization'|manual_link|safe }}
         <form method="post" id="network-form" style="margin-right:1em;">
             {{ form.csrf_token }}
             <h2>{{ _('classes')|uc_first }}</h2>
