--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
     <div style="float:left;">
+        {{ 'Place'|manual_link|safe }}
         {% if 'editor'|is_authorized %}
             <div class="button-bar">
                 <a href="{{ url_for('place_insert') }}">+ {{ _('place')|uc_first }}</a>
