--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -3,7 +3,7 @@
     {{ _('types')|uc_first }}
 {% endblock %}
 {% block content %}
-    <p>{{ 'Form_field_type'|manual_link|safe }}</p>
+    {{ 'Form_field_type'|manual_link|safe }}
     <div id="tabs-menu" class="tabs-container">
         <ul>
             <li><a href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
