--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -4,7 +4,7 @@
     > {{ _('user')|uc_first }}
 {% endblock %}
 {% block content %}
-    <p>{{ 'User'|manual_link|safe }}</p>
+    {{ 'User'|manual_link|safe }}
     {% if 'manager'|is_authorized %}
         <div class="button-bar">
             <a href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
