--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -21,6 +21,7 @@
 <script src="/static/vendor/leaflet/mapbox.js"></script>
 <script src="/static/vendor/leaflet/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet/leaflet.usermarker.js"></script>
+<script src="/static/vendor/leaflet/markercluster/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet/leaflet.fullscreen-master/Control.FullScreen.js"></script>
 <script src="/static/vendor/leaflet/easy-button.js"></script>
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.fullscreen-master/Control.FullScreen.css" />
@@ -28,5 +29,7 @@
 <link rel="stylesheet" href="/static/vendor/leaflet/font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet/L.Control.Geonames.css" />
 <link rel="stylesheet" href="/static/vendor/leaflet/leaflet.usermarker.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/markercluster/MarkerCluster.css" />
+<link rel="stylesheet" href="/static/vendor/leaflet/markercluster/MarkerCluster.Default.css" />
 <link href="/static/vendor/leaflet/draw/leaflet.draw.css" rel="stylesheet" type="text/css"/>
 <link href="/static/vendor/leaflet/shapeedit.css" rel="stylesheet" type="text/css"/>
