Configuration options for map clustering

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -21,7 +21,7 @@ p.manual {
     margin-bottom: 0.5em;
 }
 
-input[type="text"].value-type {
+input[type="text"].value-type, input[type="text"].integer {
     width: 4em;
     text-align: right;
 }
