--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %}- {{ actor.name }}{% endblock %}
 {% block breadcrumb %}
     <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a>
     > {{ actor|link|safe }}
