--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -51,6 +51,7 @@
         <title>
             {{ session['settings']['site_name'] }}
             {{ ' - ' + request.path.split('/')[1]|uc_first if request.path.split('/')[1] else '' }}
+            {% block title_name %}{% endblock %}
         </title>
     </head>
     <body>
