--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -6,4 +6,12 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
+    <script>
+        $.each({{ forms|safe }}, function () {
+            used_nodes = {{ already_used_nodes|tojson }};
+            if (used_nodes.includes(String(this))) {
+                $('#' + this).attr('disabled', true);
+            }
+        });
+    </script>
 {% endblock %}
