--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for(class_name + '_index') }}">{{ _(class_name)|uc_first }}</a>
+    <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(class_name)|uc_first }}</a>
     > {{ origin|link|safe }}
     > {{ _('add')|uc_first }} {{ _('reference')|uc_first }}
 {% endblock %}
