--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     {% if origin %}
-        <a href="{{ url_for((origin|get_view_name) + '_index') }}">{{ _(origin|get_view_name)|uc_first }}</a>
+        <a href="{{ url_for((origin.view_name) + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
         > {{ origin|link|safe }}
     {% else %}
         <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
