Added 'type to search' placeholder

--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -33,7 +33,7 @@
                                         <input
                                             class="tree-filter"
                                             id="{{ node.name|sanitize }}-tree-search"
-                                            placeholder="{{ _('filter')|uc_first }}"
+                                            placeholder="{{ placeholder|uc_first }}"
                                             name="name_search"
                                             style="width:8em;"/>
                                         <input type="hidden" name="mode" value="insert" />
