check valid link dates

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,11 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+
+.date-switch label.error {
+    padding: 0.2em;
+}
+
 #admin_index a {
     text-decoration: underline;
     margin-right: 0.5em;
