--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -9,6 +9,7 @@
                 <span class="error">{{ _('directory not writable')|uc_first }}: {{ dir }}</span><br />
             {% endif %}
         {% endfor %}
+
         <h1>{{ _('user')|uc_first }}</h1>
         <a href="{{ url_for('user_index') }}">{{ _('list')|uc_first }}</a>
         {% if 'manager'|is_authorized and session['settings']['mail'] %}
@@ -20,15 +21,14 @@
         {% if 'manager'|is_authorized %}
             <a href="{{ url_for('admin_file') }}">{{ _('settings')|uc_first }}</a>
         {% endif %}
+
         {% if 'manager'|is_authorized %}
             <h1>{{ _('settings')|uc_first }}</h1>
         {% endif %}
-
         {% if 'admin'|is_authorized %}
             <a href="{{ url_for('admin_general') }}">{{ _('general')|uc_first }}</a>
             <a href="{{ url_for('admin_mail') }}">{{ _('mail')|uc_first }}</a>
         {% endif  %}
-
         {% if 'manager'|is_authorized %}
             <a href="{{ url_for('admin_map') }}">{{ _('map')|uc_first }}</a>
             <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
@@ -49,11 +49,11 @@
                 <a href="{{ url_for('export_sql') }}">{{ _('export')|uc_first }} SQL</a>
             {% endif  %}
         {% endif  %}
-
         {% if 'admin'|is_authorized %}
             <h1>{{ _('data integrity')|uc_first }}</h1>
             <a href="{{ url_for('admin_orphans') }}">{{ _('orphans')|uc_first }}</a>
             <a href="{{ url_for('admin_check_links') }}">{{ _('check links')|uc_first }}</a>
+            <a href="{{ url_for('admin_check_dates') }}">{{ _('check dates')|uc_first }}</a>
         {% endif  %}
     </div>
 {% endblock %}
